--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,14 @@ pre {
   width: -webkit-calc(25% - (4px / 2));
   width: calc(25% - (4px / 2)); }
 
+.col-33 {
+  width: -webkit-calc(28% - (4px / 2));
+  width: calc(28% - (4px / 2)); }
+
+.col-34 {
+  width: -webkit-calc(72% - (4px / 2));
+  width: calc(72% - (4px / 2)); }
+
 .col-4 {
   width: -webkit-calc(33.33333333% - (4px / 2));
   width: calc(33.33333333% - (4px / 2)); }
